Defer Posting StoreMetricsClientInfo During PreCreateThreads

The BlockingPool isn't ready to go during PreCreateThreads. This CL
posts a task to UI's message loop to post the real task to call
StoreMetricsClientInfo.

BUG=670137

Review-Url: https://codereview.chromium.org/2566323002
Cr-Commit-Position: refs/heads/master@{#438254}

Former-commit-id: 14cdd1233c48fdd5268dbdc4ad5219c638ee22d7